@@ -6,6 +6,8 @@
 
 0.1.*: UPDATES
 --------------------------------------------------------------------------------
+* 86: More verbose output added for verbosity>1
+* 85: Fixed the wrapper function and added missing options from individual function calls
 * 84: similarityMatrix tests added
 * 83: Verbosity issues in getPairwiseSimilarityLoci fixed
 * 82: Adjustment for better consistency in finding package installation path
